fix header dropping too low

--- a/less/preorder.less
+++ b/less/preorder.less
@@ -90,6 +90,7 @@ body {
 		height: 100%;
 		margin: 0 auto;
 		text-align: left;
+		padding-top: 0;
 		.headerHeightWrapper {
 			height: @headerHeight;
 			padding-top: 9px;
